--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,6 +8,9 @@
     <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
       sample application.
     </h2>
+    <h3>
+      バーカ
+    </h3>
 
     <%= link_to "Sign up now!",'#',class:"btn btn-lg btn-primary"%>
    </div>
